[metadata]
name = partner-cloud
author = Partner Cloud Team
summary = Automation for managing access to Partner Clouds.
description_file = README.md
description_content_type = text/x-markdown; charset=UTF-8
home_page = https://github.com/canonical/partner-cloud
project_urls =
    Bug Tracker = https://github.com/canonical/partner-cloud/issues
    Source Code = https://github.com/canonical/partner-cloud
license = AGPL version 3
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    temporal
    ci

[files]
packages =
    partner_cloud

[entry_points]
console_scripts =
    grant-pc-access = partner_cloud.workflows.grant_access:main
    pc-infra-worker = partner_cloud.workers.infra:main
    pc-project-worker = partner_cloud.workers.projects:main
